test/expected/explain_rr.out
explain int& &r
             ^
14: error: reference is not supported in C
